# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  run_robot_tests.sh  tasks.py  tiedosto.bib
.github/workflows/: main.yml
documentation/: instructions.md  retro1.md  retro2.md
src/: AppLibrary.py  app.py  config.py  db.py  fly.toml  index.py  initialize_database.py  requirements.txt  schema.sql  stub_io.py
src/entities/: reference.py
src/repositories/: reference_repository.py
src/services/: bibtex.py  bibtex_format.py  reference_service.py  references.py  users.py
src/static/: main.css
src/templates/: article.html  book.html  error.html  index.html  inproceedings.html  layout.html  login.html  master.html  register.html  view_bibtex.html  view_references.html
src/tests/: bibtex_format_test.py  conftest.py  login.robot  references_test.py  resource.robot  test_reference.py  test_reference_repository.py  test_reference_service.py  users_test.py
src/tests/robot/: AppLibrary.py  add_references.robot  download_bibtex.robot  home.robot  login.robot  login_resource.robot  reference_resource.robot  register.robot  resource.robot  search.robot
